--- a/default.hbs
+++ b/default.hbs
@@ -56,7 +56,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="http://nem.io/"><img class="inject-me" src="assets/img/nemlogo.svg"/></a>
+      <a class="navbar-brand" href="http://nem.io/"><img class="inject-me" src="{{asset "img/nemlogo.svg"}}"/></a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -92,7 +92,7 @@
     <script type="text/javascript" src="{{asset "js/index.js"}}"></script>
     <script src="{{asset "js/readingTime.min.js"}}"></script>
     <script src="{{asset "js/highlight.pack.js"}}"></script>
-    <script src="node_modules/svg-injector/svg-injector.js"></script>
+    <script type="text/javascript" src="{{asset "js/svg-injector.js"}}"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
     <script>hljs.initHighlightingOnLoad();</script>
     <script>
