--- a/post.hbs
+++ b/post.hbs
@@ -153,7 +153,7 @@
 
             <script type="text/javascript">
               DiscourseEmbed = { discourseUrl: 'https://forum.nem.io/',
-                                 discourseEmbedUrl: 'http://blog.nem.io/{{{title}}}/' };
+                                 discourseEmbedUrl: 'http://blog.nem.io/nem-technical-report/' };
 
               (function() {
                 var d = document.createElement('script'); d.type = 'text/javascript'; d.async = true;
