--- a/page.hbs
+++ b/page.hbs
@@ -147,11 +147,20 @@
                     </footer>
                 </div>
             </div>
+            <!--{{> comment-list}}-->
+            <div id='discourse-comments'></div>
 
+            <script type="text/javascript">
+              DiscourseEmbed = { discourseUrl: 'https://forum.nem.io/',
+                                 discourseEmbedUrl: 'http://blog.nem.io{{url}}' };
+              (function() {
+                var d = document.createElement('script'); d.type = 'text/javascript'; d.async = true;
+                d.src = DiscourseEmbed.discourseUrl + 'javascripts/embed.js';
+                (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(d);
+              })();
+            </script>
     </article>
-{!--<section class="post-comment">--}
-{!--    <a class="muut" title="Comments on {{{title}}}" href="https://muut.com/i/errright/blogchatter:{{{id}}}">Comments</a>--}
-{!--</section>--}
+
 </main>
 
 <div class="bottom-closer">
