--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -48,11 +48,11 @@ body {
   padding: 0;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
-  -moz-font-feature-settings: "liga=1, dlig=1";
-  -ms-font-feature-settings: "liga", "dlig";
-  -webkit-font-feature-settings: "liga", "dlig";
-  -o-font-feature-settings: "liga", "dlig";
-  font-feature-settings: "liga", "dlig"; }
+  -moz-font-feature-settings: "liga=0, dlig=0";
+  -ms-font-feature-settings: "liga" 0, "dlig" 0;
+  -webkit-font-feature-settings: "liga" 0, "dlig" 0;
+  -o-font-feature-settings: "liga" 0, "dlig" 0;
+  font-feature-settings: "liga" 0, "dlig" 0; }
 
 .logo-readium {
   position: fixed;
