--- a/default.hbs
+++ b/default.hbs
@@ -69,11 +69,11 @@
           <ul class="dropdown-menu" role="menu">
             <li><a href="http://nem.io/faq.html">FAQ's</a></li>
             <li><a href="http://blog.nem.io/nem-tutorial-list/">TUTORIALS</a></li>
+            <li><a href="http://wiki.nem.io/index.php/Main_Page">WIKI</a></li>
           </ul>
         </li>
         <li><a href="http://nemflash.com/"><span>UPDATES</span></a></li>
         <li><a href="http://blog.nem.io/"><span>BLOG</span></a></li>
-        <li><a href="http://wiki.nem.io/index.php/Main_Page"><span>WIKI</span></a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
