--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -661,7 +661,7 @@ body {
 
 .post-tag-articleimage {
   display: none;
-  color: #5ab3e8; }
+  color: #5ab3e8 !important; }
 
 /* bootsrtap overrides */
 .row {
@@ -755,7 +755,7 @@ h6 {
   .dropdown ul li a:hover {
     border: none;
     background-color: transparent;
-    color: #5ab3e8; }
+    color: #5ab3e8 !important; }
 
 .navbar-toggle {
   margin-top: 35px; }
@@ -778,7 +778,7 @@ h6 {
   bottom: 0;
   left: 0;
   margin-bottom: -15px;
-  background-color: #5ab3e8;
+  background-color: #5ab3e8 !important;
   visibility: hidden;
   -webkit-transform: scaleX(0);
   transform: scaleX(0);
