--- a/default.hbs
+++ b/default.hbs
@@ -72,7 +72,7 @@
             <li><a href="http://wiki.nem.io/index.php/Main_Page">WIKI</a></li>
           </ul>
         </li>
-        <li><a href="http://nemflash.com/"><span>UPDATES</span></a></li>
+        <li><a href="http://nemflash.io/"><span>UPDATES</span></a></li>
         <li><a href="http://blog.nem.io/"><span>BLOG</span></a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
